--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+  <nav class="nav">
+    <a href="#about" class="nav__a">Sobre mim</a>
+    <a href="#projects" class="nav__a">Projetos</a>
+    <a href="#social_medias" class="nav__a">Redes Sociais</a>
+  </nav>
   <header class="header hidden content">
     <div class="header__div">
       <h1 class="header__h1">Dennis Gabriel</h1>
@@ -50,13 +55,67 @@
           <h3 class="main__h3"><a href="https://github.com/DennisGabriel-Dev/JustToDo" target="_blank">JustToDo</a></h3>
           <p class="main__p">Um ToDo List desenvolvido com Ruby on Rails, Hotwire e PostgreSQL.</p>
         </div>
-        <img src="./images/JustToDo.png" alt="" class="projects__img">
+      </div>
+
+      <div class="project">
+        <div>
+          <h3 class="main__h3"><a href="https://github.com/DennisGabriel-Dev/articles-api" target="_blank">Articles API</a></h3>
+          <p class="main__p">Uma API desenvolvida usando Ruby on Rails para publicação de artigos, 
+              com autenticação de usuários e testes unitários com RSpec.
+          </p>
+        </div>
+      </div>
+
+      <div class="project">
+        <div>
+          <h3 class="main__h3"><a href="https://github.com/DennisGabriel-Dev/Scraper" target="_blank">Scraper</a></h3>
+          <p class="main__p">WebScraper desenvolvido com ruby e o uso de algumas gems: nokogiri, httparty e parallel.
+          </p>
+          <p class="main__p">No final das análises é gerado um arquivo CSV.</p>
+        </div>
+      </div>
+
+      <div class="project">
+        <div>
+          <h3 class="main__h3"><a href="https://github.com/DennisGabriel-Dev/coffeeOrTea" target="_blank">CoffeeOrTea</a></h3>
+          <p class="main__p">API feita em Java e SpringBoot que simula um e-commerce, o banco de dados utilizado foi o MongoDB.
+          </p>
+        </div>
+      </div>
+
+      <div class="project">
+        <div>
+          <h3 class="main__h3"><a href="https://github.com/DennisGabriel-Dev/chess-system-java" target="_blank">chess-system-java</a></h3>
+          <p class="main__p">Jogo de xadrez feito com Java 17 puro, aproveitando conceitos e recursos de POO.
+          </p>
+        </div>
       </div>
     </section>
 
+
+    <section id="social_medias" class="hidden section section3">
+
+      <h2 class="main__h2">Minhas Redes Sociais</h2>
+
+      <div class="social_medias__div">
+        <a href="https://github.com/DennisGabriel-Dev" target="_blank">
+          <img src="./images/github-logo.png" alt="logo github" class="social_medias__img">
+        </a>
+
+        <a href="https://www.linkedin.com/in/dennisgabriel-dev/" target="_blank">
+          <img src="./images/linkedin-logo.png" alt="logo linkedin" class="social_medias__img">
+        </a>
+
+        <a href="https://medium.com/@dennisgabr745" target="_blank">
+          <img src="./images/medium-logo.png" alt="logo medium" class="social_medias__img">
+        </a>
+
+        <a href="https://www.youtube.com/@dennisgabrieldev" target="_blank">
+          <img src="./images/youtube-logo.png" alt="logo medium" class="social_medias__img">
+        </a>
+      </div>
+    </section>
   </main>
-
-
   <script src="./scripts/script.js"></script>
 </body>
 </html>
