--- a/index.html
+++ b/index.html
@@ -118,4 +118,8 @@
   </main>
   <script src="./scripts/script.js"></script>
 </body>
+<script type="text/javascript" src="https://res.cloudinary.com/veseylab/raw/upload/v1684982764/magicmouse-2.0.0.cdn.min.js"></script>
+<script type="text/javascript">
+  magicMouse(options);
+</script>
 </html>
