--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div>
           <h3 class="main__h3"><a href="https://github.com/DennisGabriel-Dev/JustToDo" target="_blank">JustToDo</a></h3>
           <p class="main__p">Um ToDo List desenvolvido com Ruby on Rails, Hotwire e PostgreSQL.</p>
+          <p class="main__p">Usei Devise para autenticação, I18n para internacionalização e outras gems.</p>
         </div>
       </div>
 
@@ -61,7 +62,7 @@
         <div>
           <h3 class="main__h3"><a href="https://github.com/DennisGabriel-Dev/articles-api" target="_blank">Articles API</a></h3>
           <p class="main__p">Uma API desenvolvida usando Ruby on Rails para publicação de artigos, 
-              com autenticação de usuários e testes unitários com RSpec.
+              com autenticação de usuários via JWT e testes unitários com RSpec.
           </p>
         </div>
       </div>
